# libver

./: AUTHORS  Makefile.am  README  config.h  configure.ac  libver-1.0.c  libver-1.1.c  libver-2.0.c  libver-2.3.c  libver.h  test.c
